--- a/api/indexer.oas3.yml
+++ b/api/indexer.oas3.yml
@@ -163,6 +163,14 @@
         },
         "style": "form"
       },
+      "group-id": {
+        "description": "Lookup transactions by group ID.",
+        "in": "query",
+        "name": "group-id",
+        "schema": {
+          "type": "string"
+        }
+      },
       "header-only": {
         "description": "Header only flag. When this is set to true, returned block does not contain the transactions",
         "in": "query",
@@ -5159,6 +5167,14 @@
                 "msig",
                 "lsig"
               ],
+              "type": "string"
+            }
+          },
+          {
+            "description": "Lookup transactions by group ID.",
+            "in": "query",
+            "name": "group-id",
+            "schema": {
               "type": "string"
             }
           },
