Swagger: update description for `group-id` param

--- a/api/indexer.oas3.yml
+++ b/api/indexer.oas3.yml
@@ -164,12 +164,14 @@
         "style": "form"
       },
       "group-id": {
-        "description": "Lookup transactions by group ID.",
+        "description": "Lookup transactions by group ID. This field must be base64-encoded, and afterwards, base64 characters like +, / and = must be URL-encoded",
         "in": "query",
         "name": "group-id",
         "schema": {
-          "type": "string"
-        }
+          "type": "string",
+          "x-algorand-format": "base64"
+        },
+        "x-algorand-format": "base64"
       },
       "header-only": {
         "description": "Header only flag. When this is set to true, returned block does not contain the transactions",
@@ -5171,12 +5173,14 @@
             }
           },
           {
-            "description": "Lookup transactions by group ID.",
+            "description": "Lookup transactions by group ID. This field must be base64-encoded, and afterwards, base64 characters like +, / and = must be URL-encoded",
             "in": "query",
             "name": "group-id",
             "schema": {
-              "type": "string"
-            }
+              "type": "string",
+              "x-algorand-format": "base64"
+            },
+            "x-algorand-format": "base64"
           },
           {
             "description": "Lookup the specific transaction by ID.",
