--- a/api/indexer.oas3.yml
+++ b/api/indexer.oas3.yml
@@ -231,6 +231,20 @@
         },
         "x-algorand-format": "base64"
       },
+      "participation": {
+        "description": "Proposer, expired or absent participation accounts. Comma separated list of addresses.",
+        "explode": false,
+        "in": "query",
+        "name": "participation",
+        "schema": {
+          "items": {
+            "type": "string",
+            "x-algorand-format": "Address"
+          },
+          "type": "array"
+        },
+        "style": "form"
+      },
       "proposers": {
         "description": "Accounts marked as proposer in the block header's participation updates. This parameter accepts a comma separated list of addresses.",
         "explode": false,
@@ -316,6 +330,20 @@
         "schema": {
           "type": "string"
         }
+      },
+      "updates": {
+        "description": "Expired or absent participation accounts. Comma separated list of addresses.",
+        "explode": false,
+        "in": "query",
+        "name": "updates",
+        "schema": {
+          "items": {
+            "type": "string",
+            "x-algorand-format": "Address"
+          },
+          "type": "array"
+        },
+        "style": "form"
       }
     },
     "responses": {
@@ -5043,6 +5071,34 @@
               "type": "array"
             },
             "style": "form"
+          },
+          {
+            "description": "Expired or absent participation accounts. Comma separated list of addresses.",
+            "explode": false,
+            "in": "query",
+            "name": "updates",
+            "schema": {
+              "items": {
+                "type": "string",
+                "x-algorand-format": "Address"
+              },
+              "type": "array"
+            },
+            "style": "form"
+          },
+          {
+            "description": "Proposer, expired or absent participation accounts. Comma separated list of addresses.",
+            "explode": false,
+            "in": "query",
+            "name": "participation",
+            "schema": {
+              "items": {
+                "type": "string",
+                "x-algorand-format": "Address"
+              },
+              "type": "array"
+            },
+            "style": "form"
           }
         ],
         "responses": {
@@ -5218,6 +5274,34 @@
             "explode": false,
             "in": "query",
             "name": "absent",
+            "schema": {
+              "items": {
+                "type": "string",
+                "x-algorand-format": "Address"
+              },
+              "type": "array"
+            },
+            "style": "form"
+          },
+          {
+            "description": "Expired or absent participation accounts. Comma separated list of addresses.",
+            "explode": false,
+            "in": "query",
+            "name": "updates",
+            "schema": {
+              "items": {
+                "type": "string",
+                "x-algorand-format": "Address"
+              },
+              "type": "array"
+            },
+            "style": "form"
+          },
+          {
+            "description": "Proposer, expired or absent participation accounts. Comma separated list of addresses.",
+            "explode": false,
+            "in": "query",
+            "name": "participation",
             "schema": {
               "items": {
                 "type": "string",
